<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context="com.example.shan.anew.Home">

    <TextView
        android:id="@+id/tvWelcomeMsg"
        android:layout_width="158dp"
        android:layout_height="39dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="36dp"
        android:text="@string/textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDriverID"
        android:layout_width="104dp"
        android:layout_height="34dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeMsg"/>

    <Button
        android:id="@+id/bStart"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/start_journey"
        android:background="@drawable/custom_button"
        android:alpha="0.6"
        android:textColor="#fff"
        android:layout_marginLeft="92dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="219dp"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/bEnter"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/enter_failure"
        android:background="@drawable/custom_button"
        android:alpha="0.6"
        android:textColor="#fff"
        android:layout_marginLeft="92dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/bGet" />

    <Button
        android:id="@+id/bEnd"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/end_journey"
        android:background="@drawable/custom_button"
        android:alpha="0.6"
        android:textColor="#fff"
        android:layout_marginLeft="92dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/bEnter" />

    <Button
        android:id="@+id/bGet"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/get_failure_details"
        android:background="@drawable/custom_button"
        android:alpha="0.6"
        android:textColor="#fff"
        android:layout_marginLeft="92dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/bStart"
        tools:ignore="RtlHardcoded" />
</android.support.constraint.ConstraintLayout>
